Add root package.json for deployment

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "cd server && npm install && cd ../client && npm install && npm run build"
+    "build": "cd server && npm install && cd ../client && npm install && npm run build"
   }
 }
