--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "install:server": "npm install --prefix server",
-    "install:client": "npm install --prefix client",
-    "build:client": "npm run build --prefix client",
-    "setup": "npm run install:server && npm run install:client && npm run build:client"
-  }
+  "setup": "npm run install:server && npm install && npm run build"
+}
+
 
 }
